[package]
name = "wusp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_complete = "4.5.60"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["stream"] }
tungstenite = "0.28.0"
